--- a/DBAChecksReports/Summary.rdl
+++ b/DBAChecksReports/Summary.rdl
@@ -164,11 +164,14 @@
           <QueryParameter Name="@TagIDs">
             <Value>=Parameters!TagIDs.Value</Value>
           </QueryParameter>
-          <QueryParameter Name="@TagMatching">
-            <Value>=Parameters!TagMatching.Value</Value>
-          </QueryParameter>
           <QueryParameter Name="@InstanceName">
             <Value>=Parameters!InstanceName.Value</Value>
+          </QueryParameter>
+          <QueryParameter Name="@ExcludeAzure">
+            <Value>true</Value>
+          </QueryParameter>
+          <QueryParameter Name="@AzureOnly">
+            <Value>false</Value>
           </QueryParameter>
         </QueryParameters>
       </SharedDataSet>
@@ -180,6 +183,10 @@
         <Field Name="ConnectionID">
           <DataField>ConnectionID</DataField>
           <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="EditionID">
+          <DataField>EditionID</DataField>
+          <rd:TypeName>System.Int64</rd:TypeName>
         </Field>
       </Fields>
     </DataSet>
@@ -194,21 +201,6 @@
         </Field>
         <Field Name="Tag">
           <DataField>Tag</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-      </Fields>
-    </DataSet>
-    <DataSet Name="TagMatching">
-      <SharedDataSet>
-        <SharedDataSetReference>TagMatching</SharedDataSetReference>
-      </SharedDataSet>
-      <Fields>
-        <Field Name="Label">
-          <DataField>Label</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Value">
-          <DataField>Value</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
@@ -1632,7 +1624,6 @@ DateTime.UtcNow.Subtract(iif(isnothing(Fields!LastAlert.Value),"1900-01-01",Fiel
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -1764,9 +1755,6 @@ Fields!SnapshotAgeMin.Value &amp; " to " &amp; Fields!SnapshotAgeMax.Value)</Val
                                     <Parameter Name="TagIDs">
                                       <Value>=Parameters!TagIDs.Value</Value>
                                     </Parameter>
-                                    <Parameter Name="TagMatching">
-                                      <Value>=Parameters!TagMatching.Value</Value>
-                                    </Parameter>
                                   </Parameters>
                                 </Drillthrough>
                               </Action>
@@ -1891,12 +1879,6 @@ Fields!sqlserver_uptime.Value&lt;2880,"Yellow",
               <Parameter Name="InstanceIDs">
                 <Value>=Parameters!InstanceIDs.Value</Value>
               </Parameter>
-              <Parameter Name="TagIDs">
-                <Value>=Parameters!TagIDs.Value</Value>
-              </Parameter>
-              <Parameter Name="TagMatching">
-                <Value>=Parameters!TagMatching.Value</Value>
-              </Parameter>
             </Parameters>
             <Top>2.15861in</Top>
             <Height>0.72917in</Height>
@@ -1916,6 +1898,15 @@ Fields!sqlserver_uptime.Value&lt;2880,"Yellow",
               </Parameter>
               <Parameter Name="InstanceIDs">
                 <Value>=Parameters!InstanceIDs.Value</Value>
+              </Parameter>
+              <Parameter Name="InstanceName">
+                <Value>=Parameters!InstanceName.Value</Value>
+              </Parameter>
+              <Parameter Name="DateFormat">
+                <Value>=Parameters!DateFormat.Value</Value>
+              </Parameter>
+              <Parameter Name="TagIDs">
+                <Value>-1</Value>
               </Parameter>
             </Parameters>
             <Top>2.92944in</Top>
@@ -1993,12 +1984,6 @@ Fields!sqlserver_uptime.Value&lt;2880,"Yellow",
               <Parameter Name="FilterLevel">
                 <Value>Warning</Value>
               </Parameter>
-              <Parameter Name="TagMatching">
-                <Value>=Parameters!TagMatching.Value</Value>
-              </Parameter>
-              <Parameter Name="TagIDs">
-                <Value>=Parameters!TagIDs.Value</Value>
-              </Parameter>
               <Parameter Name="InstanceIDs">
                 <Value>=Parameters!InstanceIDs.Value</Value>
               </Parameter>
@@ -2046,22 +2031,6 @@ Fields!sqlserver_uptime.Value&lt;2880,"Yellow",
         </DataSetReference>
       </ValidValues>
       <MultiValue>true</MultiValue>
-    </ReportParameter>
-    <ReportParameter Name="TagMatching">
-      <DataType>String</DataType>
-      <DefaultValue>
-        <Values>
-          <Value>ALL</Value>
-        </Values>
-      </DefaultValue>
-      <Prompt>Tag Matching</Prompt>
-      <ValidValues>
-        <DataSetReference>
-          <DataSetName>TagMatching</DataSetName>
-          <ValueField>Value</ValueField>
-          <LabelField>Label</LabelField>
-        </DataSetReference>
-      </ValidValues>
     </ReportParameter>
     <ReportParameter Name="InstanceName">
       <DataType>String</DataType>
@@ -2123,11 +2092,6 @@ Fields!sqlserver_uptime.Value&lt;2880,"Yellow",
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>TagIDs</ParameterName>
-        </CellDefinition>
-        <CellDefinition>
-          <ColumnIndex>1</ColumnIndex>
-          <RowIndex>0</RowIndex>
-          <ParameterName>TagMatching</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>2</ColumnIndex>
