--- a/DBAChecksReports/Alerts.rdl
+++ b/DBAChecksReports/Alerts.rdl
@@ -149,8 +149,8 @@
           <QueryParameter Name="@TagIDs">
             <Value>=Parameters!TagIDs.Value</Value>
           </QueryParameter>
-          <QueryParameter Name="@TagMatching">
-            <Value>=Parameters!TagMatching.Value</Value>
+          <QueryParameter Name="@ExcludeAzure">
+            <Value>=true</Value>
           </QueryParameter>
           <QueryParameter Name="@InstanceName">
             <Value>=Parameters!InstanceName.Value</Value>
@@ -169,21 +169,6 @@
         <Field Name="EditionID">
           <DataField>EditionID</DataField>
           <rd:TypeName>System.Int64</rd:TypeName>
-        </Field>
-      </Fields>
-    </DataSet>
-    <DataSet Name="TagMatching">
-      <SharedDataSet>
-        <SharedDataSetReference>TagMatching</SharedDataSetReference>
-      </SharedDataSet>
-      <Fields>
-        <Field Name="Label">
-          <DataField>Label</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Value">
-          <DataField>Value</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
     </DataSet>
@@ -1942,7 +1927,7 @@ System.TimeZone.CurrentTimeZone.ToLocalTime(Fields!count_reset_utc.Value)
             </SortExpressions>
             <Top>0.42in</Top>
             <Height>0.85in</Height>
-            <Width>24.11667in</Width>
+            <Width>24.11666in</Width>
             <ZIndex>1</ZIndex>
             <Style />
           </Tablix>
@@ -2002,23 +1987,6 @@ System.TimeZone.CurrentTimeZone.ToLocalTime(Fields!count_reset_utc.Value)
       </ValidValues>
       <MultiValue>true</MultiValue>
     </ReportParameter>
-    <ReportParameter Name="TagMatching">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <DefaultValue>
-        <Values>
-          <Value>ALL</Value>
-        </Values>
-      </DefaultValue>
-      <Prompt>Tag Matching</Prompt>
-      <ValidValues>
-        <DataSetReference>
-          <DataSetName>TagMatching</DataSetName>
-          <ValueField>Value</ValueField>
-          <LabelField>Label</LabelField>
-        </DataSetReference>
-      </ValidValues>
-    </ReportParameter>
     <ReportParameter Name="InstanceName">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
@@ -2072,11 +2040,6 @@ System.TimeZone.CurrentTimeZone.ToLocalTime(Fields!count_reset_utc.Value)
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>TagIDs</ParameterName>
-        </CellDefinition>
-        <CellDefinition>
-          <ColumnIndex>1</ColumnIndex>
-          <RowIndex>1</RowIndex>
-          <ParameterName>TagMatching</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>2</ColumnIndex>
