--- a/DBAChecksReports/AzureDB Resource Summary.rdl
+++ b/DBAChecksReports/AzureDB Resource Summary.rdl
@@ -125,11 +125,12 @@
           <QueryParameter Name="@TagIDs">
             <Value>=Parameters!TagIDs.Value</Value>
           </QueryParameter>
-          <QueryParameter Name="@TagMatching">
-            <Value>=Parameters!TagMatching.Value</Value>
-          </QueryParameter>
           <QueryParameter Name="@InstanceName">
             <Value>=Parameters!InstanceName.Value</Value>
+          </QueryParameter>
+          <QueryParameter Name="@AzureOnly">
+            <Value>true</Value>
+            <rd:UserDefined>true</rd:UserDefined>
           </QueryParameter>
         </QueryParameters>
       </SharedDataSet>
@@ -152,21 +153,6 @@
           </FilterValues>
         </Filter>
       </Filters>
-    </DataSet>
-    <DataSet Name="TagMatching">
-      <SharedDataSet>
-        <SharedDataSetReference>TagMatching</SharedDataSetReference>
-      </SharedDataSet>
-      <Fields>
-        <Field Name="Label">
-          <DataField>Label</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Value">
-          <DataField>Value</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-      </Fields>
     </DataSet>
     <DataSet Name="Tags">
       <SharedDataSet>
@@ -1234,9 +1220,6 @@
                                     </Parameter>
                                     <Parameter Name="TagIDs">
                                       <Value>=Parameters!TagIDs.Value</Value>
-                                    </Parameter>
-                                    <Parameter Name="TagMatching">
-                                      <Value>=Parameters!TagMatching.Value</Value>
                                     </Parameter>
                                     <Parameter Name="DatabaseName">
                                       <Value>=Parameters!DatabaseName.Value</Value>
@@ -7218,23 +7201,6 @@ Fields!Min_DTULimit.Value &amp; " to " &amp; Fields!MAX_DTULimit.Value,Fields!MA
       </ValidValues>
       <MultiValue>true</MultiValue>
     </ReportParameter>
-    <ReportParameter Name="TagMatching">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <DefaultValue>
-        <Values>
-          <Value>ALL</Value>
-        </Values>
-      </DefaultValue>
-      <Prompt>Tag Matching</Prompt>
-      <ValidValues>
-        <DataSetReference>
-          <DataSetName>TagMatching</DataSetName>
-          <ValueField>Value</ValueField>
-          <LabelField>Label</LabelField>
-        </DataSetReference>
-      </ValidValues>
-    </ReportParameter>
     <ReportParameter Name="InstanceName">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
@@ -7283,11 +7249,6 @@ Fields!Min_DTULimit.Value &amp; " to " &amp; Fields!MAX_DTULimit.Value,Fields!MA
           <ColumnIndex>2</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>TagIDs</ParameterName>
-        </CellDefinition>
-        <CellDefinition>
-          <ColumnIndex>3</ColumnIndex>
-          <RowIndex>0</RowIndex>
-          <ParameterName>TagMatching</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
