--- a/DBAChecksReports/Blocking.rdl
+++ b/DBAChecksReports/Blocking.rdl
@@ -140,21 +140,6 @@
         </Field>
       </Fields>
     </DataSet>
-    <DataSet Name="TagMatching">
-      <SharedDataSet>
-        <SharedDataSetReference>TagMatching</SharedDataSetReference>
-      </SharedDataSet>
-      <Fields>
-        <Field Name="Label">
-          <DataField>Label</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Value">
-          <DataField>Value</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-      </Fields>
-    </DataSet>
     <DataSet Name="Tags">
       <SharedDataSet>
         <SharedDataSetReference>Tags</SharedDataSetReference>
@@ -176,9 +161,6 @@
         <QueryParameters>
           <QueryParameter Name="@TagIDs">
             <Value>=Parameters!TagIDs.Value</Value>
-          </QueryParameter>
-          <QueryParameter Name="@TagMatching">
-            <Value>=Parameters!TagMatching.Value</Value>
           </QueryParameter>
           <QueryParameter Name="@InstanceName">
             <Value>=Parameters!InstanceName.Value</Value>
@@ -2045,13 +2027,10 @@ Parameters!ToDate.Value)
                                       <Value>=Parameters!ShowTable.Value</Value>
                                     </Parameter>
                                     <Parameter Name="DateFormat">
-                                      <Value>=Parameters!DateFormat.Value</Value>
+                                      <Value>=Fields!BlockWaitTime.Value</Value>
                                     </Parameter>
                                     <Parameter Name="TagIDs">
                                       <Value>=Parameters!TagIDs.Value</Value>
-                                    </Parameter>
-                                    <Parameter Name="TagMatching">
-                                      <Value>=Parameters!TagMatching.Value</Value>
                                     </Parameter>
                                     <Parameter Name="InstanceName">
                                       <Value>=Parameters!InstanceName.Value</Value>
@@ -2436,16 +2415,22 @@ Parameters!ToDate.Value)
     </ReportSection>
   </ReportSections>
   <ReportParameters>
+    <ReportParameter Name="BlockingSnapshotID">
+      <DataType>Integer</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>Blocking Snapshot ID</Prompt>
+    </ReportParameter>
     <ReportParameter Name="blocking_session_id">
       <DataType>Integer</DataType>
       <Nullable>true</Nullable>
       <Prompt>blocking session id</Prompt>
       <Hidden>true</Hidden>
     </ReportParameter>
-    <ReportParameter Name="BlockingSnapshotID">
-      <DataType>Integer</DataType>
+    <ReportParameter Name="Text">
+      <DataType>String</DataType>
       <Nullable>true</Nullable>
-      <Prompt>Blocking Snapshot ID</Prompt>
+      <Prompt>Text</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
     <ReportParameter Name="FromDate">
       <DataType>DateTime</DataType>
@@ -2496,23 +2481,6 @@ Parameters!ToDate.Value)
       </ValidValues>
       <MultiValue>true</MultiValue>
     </ReportParameter>
-    <ReportParameter Name="TagMatching">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <DefaultValue>
-        <Values>
-          <Value>ALL</Value>
-        </Values>
-      </DefaultValue>
-      <Prompt>Tag Matching</Prompt>
-      <ValidValues>
-        <DataSetReference>
-          <DataSetName>TagMatching</DataSetName>
-          <ValueField>Value</ValueField>
-          <LabelField>Label</LabelField>
-        </DataSetReference>
-      </ValidValues>
-    </ReportParameter>
     <ReportParameter Name="InstanceName">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
@@ -2536,25 +2504,19 @@ Parameters!ToDate.Value)
       </ValidValues>
       <MultiValue>true</MultiValue>
     </ReportParameter>
-    <ReportParameter Name="Text">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <Prompt>Text</Prompt>
-      <Hidden>true</Hidden>
-    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
       <NumberOfColumns>4</NumberOfColumns>
-      <NumberOfRows>4</NumberOfRows>
+      <NumberOfRows>3</NumberOfRows>
       <CellDefinitions>
         <CellDefinition>
-          <ColumnIndex>2</ColumnIndex>
+          <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>blocking_session_id</ParameterName>
         </CellDefinition>
         <CellDefinition>
-          <ColumnIndex>3</ColumnIndex>
+          <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>BlockingSnapshotID</ParameterName>
         </CellDefinition>
@@ -2586,21 +2548,16 @@ Parameters!ToDate.Value)
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>2</RowIndex>
-          <ParameterName>TagMatching</ParameterName>
+          <ParameterName>InstanceName</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>2</ColumnIndex>
           <RowIndex>2</RowIndex>
-          <ParameterName>InstanceName</ParameterName>
-        </CellDefinition>
-        <CellDefinition>
-          <ColumnIndex>3</ColumnIndex>
-          <RowIndex>2</RowIndex>
           <ParameterName>InstanceIDs</ParameterName>
         </CellDefinition>
         <CellDefinition>
-          <ColumnIndex>0</ColumnIndex>
-          <RowIndex>3</RowIndex>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>0</RowIndex>
           <ParameterName>Text</ParameterName>
         </CellDefinition>
       </CellDefinitions>
