--- a/DBAChecksReports/LogShipping.rdl
+++ b/DBAChecksReports/LogShipping.rdl
@@ -99,21 +99,6 @@
         </Field>
       </Fields>
     </DataSet>
-    <DataSet Name="TagMatching">
-      <SharedDataSet>
-        <SharedDataSetReference>TagMatching</SharedDataSetReference>
-      </SharedDataSet>
-      <Fields>
-        <Field Name="Label">
-          <DataField>Label</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Value">
-          <DataField>Value</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-      </Fields>
-    </DataSet>
     <DataSet Name="Connections">
       <SharedDataSet>
         <SharedDataSetReference>Connections</SharedDataSetReference>
@@ -121,11 +106,12 @@
           <QueryParameter Name="@TagIDs">
             <Value>=Parameters!TagIDs.Value</Value>
           </QueryParameter>
-          <QueryParameter Name="@TagMatching">
-            <Value>=Parameters!TagMatching.Value</Value>
-          </QueryParameter>
           <QueryParameter Name="@InstanceName">
             <Value>=Parameters!InstanceName.Value</Value>
+          </QueryParameter>
+          <QueryParameter Name="@ExcludeAzure">
+            <Value>true</Value>
+            <rd:UserDefined>true</rd:UserDefined>
           </QueryParameter>
         </QueryParameters>
       </SharedDataSet>
@@ -2487,8 +2473,7 @@ Fields!Status.Value=4,"Green",
       </ValidValues>
     </ReportParameter>
     <ReportParameter Name="TagIDs">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
+      <DataType>Integer</DataType>
       <DefaultValue>
         <Values>
           <Value>-1</Value>
@@ -2502,23 +2487,7 @@ Fields!Status.Value=4,"Green",
           <LabelField>Tag</LabelField>
         </DataSetReference>
       </ValidValues>
-    </ReportParameter>
-    <ReportParameter Name="TagMatching">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <DefaultValue>
-        <Values>
-          <Value>ALL</Value>
-        </Values>
-      </DefaultValue>
-      <Prompt>Tag Matching</Prompt>
-      <ValidValues>
-        <DataSetReference>
-          <DataSetName>TagMatching</DataSetName>
-          <ValueField>Value</ValueField>
-          <LabelField>Label</LabelField>
-        </DataSetReference>
-      </ValidValues>
+      <MultiValue>true</MultiValue>
     </ReportParameter>
     <ReportParameter Name="InstanceName">
       <DataType>String</DataType>
@@ -2526,7 +2495,7 @@ Fields!Status.Value=4,"Green",
       <Prompt>Instance Name</Prompt>
     </ReportParameter>
     <ReportParameter Name="InstanceIDs">
-      <DataType>String</DataType>
+      <DataType>Integer</DataType>
       <DefaultValue>
         <DataSetReference>
           <DataSetName>Connections</DataSetName>
@@ -2567,11 +2536,6 @@ Fields!Status.Value=4,"Green",
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>TagIDs</ParameterName>
-        </CellDefinition>
-        <CellDefinition>
-          <ColumnIndex>2</ColumnIndex>
-          <RowIndex>0</RowIndex>
-          <ParameterName>TagMatching</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>3</ColumnIndex>
